[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/LevelControlMainMenu2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilemaps/level.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Tilemaps/objects.tres" type="TileSet" id=3]
[ext_resource path="res://Scripts/Tilemap.gd" type="Script" id=4]
[ext_resource path="res://Assets/GUI/Fertig/ButtonJoin.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/GUI/Fertig/ButtonHost.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/GUI/Fertig/ButtonBack.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/WandHoch.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Characters/Mainchar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Characters/NPC.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/FabrikhalleRechts.tscn" type="PackedScene" id=11]

[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Boden" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 48 )
cell_quadrant_size = 1
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 1
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 393215, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327693, 8, 0, 458749, 8, 0, 458750, 8, 0, 458751, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393221, 15, 0, 393222, 15, 0, 393223, 15, 0, 393224, 2, 0, 393226, 8, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 8, 0, 524283, 8, 0, 524284, 8, 0, 524285, 8, 0, 524286, 8, 0, 524287, 8, 0, 458752, 8, 0, 458755, 2, 0, 458756, 2, 0, 458757, 15, 0, 458758, 15, 0, 458759, 15, 0, 458760, 15, 0, 458761, 15, 0, 458763, 2, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 589817, 8, 0, 589818, 8, 0, 589819, 8, 0, 589820, 8, 0, 589821, 8, 0, 589822, 8, 0, 589823, 8, 0, 524289, 2, 0, 524290, 2, 0, 524291, 15, 0, 524292, 15, 0, 524293, 15, 0, 524294, 15, 0, 524295, 15, 0, 524296, 15, 0, 524297, 15, 0, 524298, 15, 0, 524299, 15, 0, 524300, 15, 0, 524301, 15, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 655351, 8, 0, 655352, 8, 0, 655353, 8, 0, 655354, 8, 0, 655355, 8, 0, 655356, 8, 0, 655359, 15, 0, 589824, 15, 0, 589825, 15, 0, 589826, 15, 0, 589827, 2, 0, 589828, 15, 0, 589829, 15, 0, 589830, 15, 0, 589831, 15, 0, 589832, 15, 0, 589833, 2, 0, 589834, 15, 0, 589835, 15, 0, 589836, 15, 0, 589837, 15, 0, 589838, 2, 0, 589839, 2, 0, 589840, 8, 0, 589841, 8, 0, 589842, 8, 0, 589843, 8, 0, 589844, 8, 0, 589845, 8, 0, 720885, 8, 0, 720886, 8, 0, 720887, 8, 0, 720888, 8, 0, 720889, 8, 0, 720890, 8, 0, 720893, 2, 0, 720894, 15, 0, 720895, 15, 0, 655360, 15, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 15, 0, 655366, 2, 0, 655367, 2, 0, 655368, 15, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 15, 0, 655373, 15, 0, 655374, 15, 0, 655375, 15, 0, 655376, 2, 0, 655377, 2, 0, 655378, 8, 0, 655379, 8, 0, 655380, 8, 0, 655381, 8, 0, 655382, 8, 0, 655383, 8, 0, 786419, 8, 0, 786420, 8, 0, 786421, 8, 0, 786422, 8, 0, 786423, 8, 0, 786424, 8, 0, 786427, 2, 0, 786428, 2, 0, 786429, 2, 0, 786430, 15, 0, 786431, 15, 0, 720896, 15, 0, 720897, 15, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 15, 0, 720903, 15, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 15, 0, 720911, 15, 0, 720912, 15, 0, 720913, 15, 0, 720914, 2, 0, 720915, 2, 0, 720916, 8, 0, 720917, 8, 0, 720918, 8, 0, 720919, 8, 0, 720920, 8, 0, 720921, 8, 0, 851953, 8, 0, 851954, 8, 0, 851955, 8, 0, 851956, 8, 0, 851957, 8, 0, 851958, 8, 0, 851959, 8, 0, 851960, 2, 0, 851961, 2, 0, 851962, 2, 0, 851963, 2, 0, 851964, 2, 0, 851965, 2, 0, 851966, 15, 0, 851967, 2, 0, 786432, 15, 0, 786433, 2, 0, 786434, 2, 0, 786435, 2, 0, 786436, 2, 0, 786437, 2, 0, 786438, 2, 0, 786439, 2, 0, 786440, 15, 0, 786441, 15, 0, 786442, 15, 0, 786443, 15, 0, 786444, 15, 0, 786445, 15, 0, 786446, 15, 0, 786447, 2, 0, 786448, 2, 0, 786449, 2, 0, 786450, 2, 0, 786451, 2, 0, 786452, 2, 0, 786453, 2, 0, 786454, 8, 0, 786455, 8, 0, 786456, 8, 0, 786457, 8, 0, 786458, 8, 0, 786459, 8, 0, 917487, 8, 0, 917488, 8, 0, 917489, 8, 0, 917490, 8, 0, 917491, 8, 0, 917492, 8, 0, 917493, 8, 0, 917494, 8, 0, 917495, 2, 0, 917496, 2, 0, 917497, 2, 0, 917498, 2, 0, 917499, 2, 0, 917500, 2, 0, 917501, 2, 0, 917502, 2, 0, 917503, 2, 0, 851968, 2, 0, 851969, 2, 0, 851970, 2, 0, 851971, 2, 0, 851972, 2, 0, 851973, 2, 0, 851974, 2, 0, 851975, 2, 0, 851976, 2, 0, 851977, 2, 0, 851978, 2, 0, 851979, 2, 0, 851980, 15, 0, 851981, 2, 0, 851982, 2, 0, 851983, 2, 0, 851984, 2, 0, 851985, 2, 0, 851986, 2, 0, 851987, 2, 0, 851988, 2, 0, 851989, 2, 0, 851990, 2, 0, 851991, 13, 0, 851992, 8, 0, 851993, 8, 0, 851994, 8, 0, 851995, 8, 0, 851996, 8, 0, 851997, 8, 0, 983021, 8, 0, 983022, 8, 0, 983023, 8, 0, 983024, 8, 0, 983025, 8, 0, 983026, 8, 0, 983027, 8, 0, 983028, 8, 0, 983029, 2, 0, 983030, 2, 0, 983031, 2, 0, 983032, 2, 0, 983033, 2, 0, 983034, 2, 0, 983035, 2, 0, 983036, 2, 0, 983037, 2, 0, 983038, 2, 0, 983039, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 7, 0, 917524, 7, 0, 917525, 7, 0, 917526, 7, 0, 917527, 8, 0, 917528, 8, 0, 917529, 8, 0, 917530, 8, 0, 917531, 8, 0, 917532, 8, 0, 1048555, 8, 0, 1048556, 8, 0, 1048557, 8, 0, 1048558, 8, 0, 1048559, 8, 0, 1048560, 8, 0, 1048561, 2, 0, 1048563, 11, 0, 1048564, 11, 0, 1048565, 11, 0, 1048566, 11, 0, 1048567, 2, 0, 1048568, 2, 0, 1048569, 2, 0, 1048570, 2, 0, 1048571, 2, 0, 1048572, 2, 0, 1048573, 2, 0, 1048574, 2, 0, 1048575, 2, 0, 983040, 2, 0, 983041, 2, 0, 983042, 2, 0, 983043, 2, 0, 983044, 2, 0, 983045, 2, 0, 983046, 2, 0, 983047, 2, 0, 983048, 2, 0, 983049, 2, 0, 983050, 2, 0, 983051, 2, 0, 983052, 2, 0, 983053, 2, 0, 983054, 2, 0, 983055, 2, 0, 983056, 2, 0, 983057, 2, 0, 983058, 7, 0, 983059, 7, 0, 983060, 7, 0, 983061, 8, 0, 983062, 8, 0, 983063, 8, 0, 983064, 8, 0, 983065, 8, 0, 983066, 8, 0, 1114089, 8, 0, 1114090, 8, 0, 1114091, 8, 0, 1114092, 8, 0, 1114093, 8, 0, 1114094, 8, 0, 1114095, 2, 0, 1114096, 2, 0, 1114097, 11, 0, 1114098, 11, 0, 1114099, 5, 0, 1114100, 11, 0, 1114101, 2, 0, 1114102, 2, 0, 1114103, 2, 0, 1114104, 2, 0, 1114105, 2, 0, 1114106, 2, 0, 1114107, 2, 0, 1114108, 2, 0, 1114109, 2, 0, 1114110, 2, 0, 1114111, 2, 0, 1048576, 2, 0, 1048577, 2, 0, 1048578, 2, 0, 1048579, 2, 0, 1048580, 2, 0, 1048581, 2, 0, 1048582, 2, 0, 1048583, 2, 0, 1048584, 2, 0, 1048585, 2, 0, 1048586, 2, 0, 1048587, 2, 0, 1048588, 2, 0, 1048589, 2, 0, 1048590, 2, 0, 1048591, 2, 0, 1048592, 23, 0, 1048593, 7, 0, 1048594, 7, 0, 1048595, 8, 0, 1048596, 8, 0, 1048597, 8, 0, 1048598, 8, 0, 1048599, 8, 0, 1048600, 8, 0, 1179623, 8, 0, 1179624, 8, 0, 1179625, 8, 0, 1179626, 8, 0, 1179627, 8, 0, 1179628, 8, 0, 1179631, 11, 0, 1179632, 11, 0, 1179633, 5, 0, 1179634, 11, 0, 1179635, 11, 0, 1179636, 11, 0, 1179637, 11, 0, 1179638, 2, 0, 1179639, 2, 0, 1179640, 2, 0, 1179641, 2, 0, 1179642, 2, 0, 1179643, 2, 0, 1179644, 2, 0, 1179645, 2, 0, 1179646, 2, 0, 1179647, 2, 0, 1114112, 2, 0, 1114113, 2, 0, 1114114, 2, 0, 1114115, 2, 0, 1114116, 3, 0, 1114117, 3, 0, 1114118, 3, 0, 1114119, 3, 0, 1114120, 3, 0, 1114121, 3, 0, 1114122, 3, 0, 1114123, 3, 0, 1114124, 3, 0, 1114125, 2, 0, 1114126, 2, 0, 1114127, 7, 0, 1114128, 7, 0, 1114129, 8, 0, 1114130, 8, 0, 1114131, 8, 0, 1114132, 8, 0, 1114133, 8, 0, 1114134, 8, 0, 1245157, 8, 0, 1245158, 8, 0, 1245159, 8, 0, 1245160, 8, 0, 1245161, 8, 0, 1245162, 8, 0, 1245165, 10, 0, 1245166, 10, 0, 1245167, 5, 0, 1245168, 11, 0, 1245169, 11, 0, 1245170, 11, 0, 1245171, 5, 0, 1245172, 11, 0, 1245173, 11, 0, 1245174, 2, 0, 1245175, 2, 0, 1245176, 2, 0, 1245177, 2, 0, 1245178, 2, 0, 1245179, 2, 0, 1245180, 2, 0, 1245181, 2, 0, 1245182, 2, 0, 1245183, 2, 0, 1179648, 2, 0, 1179649, 2, 0, 1179650, 2, 0, 1179651, 2, 0, 1179652, 2, 0, 1179653, 2, 0, 1179654, 2, 0, 1179655, 2, 0, 1179656, 2, 0, 1179657, 2, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179661, 7, 0, 1179662, 7, 0, 1179663, 8, 0, 1179664, 8, 0, 1179665, 8, 0, 1179666, 8, 0, 1179667, 8, 0, 1179668, 8, 0, 1179677, 23, 0, 1310692, 8, 0, 1310693, 8, 0, 1310694, 8, 0, 1310695, 8, 0, 1310696, 8, 0, 1310697, 8, 0, 1310698, 12, 0, 1310699, 6, 0, 1310702, 10, 0, 1310703, 10, 0, 1310704, 11, 0, 1310705, 5, 0, 1310706, 10, 0, 1310707, 10, 0, 1310708, 11, 0, 1310709, 11, 0, 1310710, 11, 0, 1310711, 2, 0, 1310712, 2, 0, 1310713, 2, 0, 1310714, 2, 0, 1310715, 2, 0, 1310716, 2, 0, 1310717, 2, 0, 1310718, 2, 0, 1310719, 2, 0, 1245184, 2, 0, 1245185, 2, 0, 1245186, 2, 0, 1245187, 2, 0, 1245188, 2, 0, 1245189, 2, 0, 1245190, 2, 0, 1245191, 2, 0, 1245192, 2, 0, 1245193, 2, 0, 1245194, 2, 0, 1245195, 7, 0, 1245196, 7, 0, 1245197, 8, 0, 1245198, 8, 0, 1245199, 8, 0, 1245200, 8, 0, 1245201, 8, 0, 1245202, 8, 0, 1245214, 2, 0, 1376230, 8, 0, 1376231, 8, 0, 1376232, 8, 0, 1376233, 8, 0, 1376234, 8, 0, 1376235, 8, 0, 1376236, 6, 0, 1376237, 6, 0, 1376238, 8, 0, 1376240, 10, 0, 1376241, 10, 0, 1376242, 10, 0, 1376243, 9, 0, 1376244, 9, 0, 1376245, 10, 0, 1376246, 10, 0, 1376247, 11, 0, 1376248, 2, 0, 1376249, 2, 0, 1376250, 2, 0, 1376251, 2, 0, 1376252, 2, 0, 1376253, 2, 0, 1376254, 2, 0, 1376255, 2, 0, 1310720, 2, 0, 1310721, 2, 0, 1310722, 2, 0, 1310723, 2, 0, 1310724, 2, 0, 1310725, 2, 0, 1310726, 2, 0, 1310727, 2, 0, 1310728, 2, 0, 1310729, 7, 0, 1310730, 7, 0, 1310731, 8, 0, 1310732, 8, 0, 1310733, 8, 0, 1310734, 8, 0, 1310735, 8, 0, 1310736, 8, 0, 1441768, 8, 0, 1441769, 8, 0, 1441770, 8, 0, 1441771, 8, 0, 1441772, 8, 0, 1441773, 8, 0, 1441774, 6, 0, 1441775, 6, 0, 1441778, 11, 0, 1441779, 11, 0, 1441780, 9, 0, 1441781, 11, 0, 1441782, 11, 0, 1441783, 11, 0, 1441784, 11, 0, 1441785, 11, 0, 1441786, 2, 0, 1441787, 2, 0, 1441788, 2, 0, 1441789, 2, 0, 1441790, 2, 0, 1441791, 2, 0, 1376256, 2, 0, 1376257, 2, 0, 1376258, 2, 0, 1376259, 3, 0, 1376260, 3, 0, 1376261, 7, 0, 1376262, 7, 0, 1376263, 7, 0, 1376264, 7, 0, 1376265, 8, 0, 1376266, 8, 0, 1376267, 8, 0, 1376268, 8, 0, 1376269, 8, 0, 1376270, 8, 0, 1376287, 2, 0, 1376288, 2, 0, 1507306, 8, 0, 1507307, 8, 0, 1507308, 8, 0, 1507309, 8, 0, 1507310, 8, 0, 1507311, 8, 0, 1507312, 6, 0, 1507313, 6, 0, 1507316, 11, 0, 1507317, 11, 0, 1507318, 11, 0, 1507319, 11, 0, 1507320, 11, 0, 1507321, 10, 0, 1507322, 11, 0, 1507323, 2, 0, 1507324, 3, 0, 1507325, 2, 0, 1507326, 2, 0, 1507327, 3, 0, 1441792, 3, 0, 1441793, 3, 0, 1441794, 3, 0, 1441795, 7, 0, 1441796, 7, 0, 1441797, 7, 0, 1441798, 7, 0, 1441799, 8, 0, 1441800, 8, 0, 1441801, 8, 0, 1441802, 8, 0, 1441803, 8, 0, 1441804, 8, 0, 1441839, 8, 0, 1572844, 8, 0, 1572845, 8, 0, 1572846, 8, 0, 1572847, 8, 0, 1572848, 8, 0, 1572849, 8, 0, 1572850, 6, 0, 1572851, 6, 0, 1572853, 6, 0, 1572854, 11, 0, 1572855, 11, 0, 1572856, 11, 0, 1572857, 9, 0, 1572858, 10, 0, 1572859, 9, 0, 1572860, 9, 0, 1572861, 10, 0, 1572862, 3, 0, 1572863, 3, 0, 1507328, 3, 0, 1507329, 10, 0, 1507330, 7, 0, 1507331, 7, 0, 1507332, 7, 0, 1507333, 8, 0, 1507334, 8, 0, 1507335, 8, 0, 1507336, 8, 0, 1507337, 8, 0, 1507338, 8, 0, 1638382, 8, 0, 1638383, 8, 0, 1638384, 8, 0, 1638385, 8, 0, 1638386, 8, 0, 1638387, 8, 0, 1638388, 6, 0, 1638389, 6, 0, 1638390, 6, 0, 1638391, 6, 0, 1638392, 11, 0, 1638393, 10, 0, 1638394, 9, 0, 1638395, 10, 0, 1638396, 10, 0, 1638397, 10, 0, 1638398, 9, 0, 1638399, 7, 0, 1572864, 10, 0, 1572865, 7, 0, 1572866, 7, 0, 1572867, 8, 0, 1572868, 8, 0, 1572869, 8, 0, 1572870, 8, 0, 1572871, 8, 0, 1572872, 8, 0, 1703920, 8, 0, 1703921, 8, 0, 1703922, 8, 0, 1703923, 8, 0, 1703924, 8, 0, 1703925, 8, 0, 1703926, 6, 0, 1703927, 6, 0, 1703928, 6, 0, 1703929, 6, 0, 1703930, 10, 0, 1703931, 10, 0, 1703932, 10, 0, 1703933, 10, 0, 1703934, 7, 0, 1703935, 7, 0, 1638400, 7, 0, 1638401, 8, 0, 1638402, 8, 0, 1638403, 8, 0, 1638404, 8, 0, 1638405, 8, 0, 1638406, 8, 0, 1769458, 8, 0, 1769459, 8, 0, 1769460, 8, 0, 1769461, 8, 0, 1769462, 8, 0, 1769463, 8, 0, 1769464, 6, 0, 1769465, 6, 0, 1769466, 6, 0, 1769467, 6, 0, 1769468, 10, 0, 1769469, 7, 0, 1769470, 7, 0, 1769471, 8, 0, 1703936, 8, 0, 1703937, 8, 0, 1703938, 8, 0, 1703939, 8, 0, 1703940, 8, 0, 1703968, 23, 0, 1834996, 8, 0, 1834997, 8, 0, 1834998, 8, 0, 1834999, 8, 0, 1835000, 8, 0, 1835001, 8, 0, 1835002, 6, 0, 1835003, 4, 0, 1835004, 7, 0, 1835005, 8, 0, 1835006, 8, 0, 1835007, 8, 0, 1769472, 8, 0, 1769473, 8, 0, 1769474, 8, 0, 1900534, 8, 0, 1900535, 8, 0, 1900536, 8, 0, 1900537, 8, 0, 1900538, 8, 0, 1900539, 8, 0, 1900540, 8, 0, 1900541, 8, 0, 1900542, 8, 0, 1900543, 8, 0, 1835008, 8, 0, 1966072, 8, 0, 1966073, 8, 0, 1966074, 8, 0, 1966075, 8, 0, 1966076, 8, 0, 1966077, 8, 0, 1966078, 8, 0, 2031610, 8, 0, 2031611, 8, 0, 2031612, 8, 0 )
_sections_unfolded = [ "Cell", "Collision", "Occluder", "Transform", "Visibility", "Z Index" ]

[node name="BodenObjekte" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 48 )
cell_quadrant_size = 1
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 1
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 327685, 3, 0, 327686, 3, 0, 327687, 3, 0, 393219, 3, 0, 393220, 3, 0, 393224, 3, 0, 393225, 3, 0, 458753, 3, 0, 458754, 3, 0, 458762, 3, 0, 458763, 3, 0, 589823, 3, 0, 524288, 3, 0, 524300, 3, 0, 524301, 3, 0, 655357, 3, 0, 655358, 3, 0, 589838, 3, 0, 589839, 3, 0, 720891, 3, 0, 720892, 3, 0, 655376, 3, 0, 655377, 3, 0, 786425, 3, 0, 786426, 3, 0, 720914, 3, 0, 720915, 3, 0, 851959, 3, 0, 851960, 3, 0, 786452, 3, 0, 786453, 3, 0, 917493, 3, 0, 917494, 3, 0, 851989, 3, 0, 851990, 3, 0, 983027, 3, 0, 983028, 3, 0, 917523, 3, 0, 917524, 3, 0, 1048561, 3, 0, 1048562, 3, 0, 983057, 3, 0, 983058, 3, 0, 1114095, 3, 0, 1114096, 3, 0, 1048590, 3, 0, 1048591, 3, 0, 1048592, 3, 0, 1179629, 3, 0, 1179630, 3, 0, 1114125, 3, 0, 1114126, 3, 0, 1245163, 3, 0, 1245164, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1310700, 3, 0, 1310701, 3, 0, 1245193, 3, 0, 1245194, 3, 0, 1376238, 3, 0, 1376239, 3, 0, 1310727, 3, 0, 1310728, 3, 0, 1441776, 3, 0, 1441777, 3, 0, 1376261, 3, 0, 1376262, 3, 0, 1507314, 3, 0, 1507315, 3, 0, 1441795, 3, 0, 1441796, 3, 0, 1572852, 3, 0, 1572853, 3, 0, 1507329, 3, 0, 1507330, 3, 0, 1638390, 3, 0, 1638391, 3, 0, 1638399, 3, 0, 1572864, 3, 0, 1703928, 3, 0, 1703929, 3, 0, 1703933, 3, 0, 1703934, 3, 0, 1769466, 3, 0, 1769467, 3, 0, 1769468, 3, 0 )
script = ExtResource( 4 )
_sections_unfolded = [ "Cell", "Collision", "Occluder", "Transform", "Visibility", "Z Index" ]

[node name="JoinButton" parent="." index="2" instance=ExtResource( 5 )]

position = Vector2( 223.925, 640.314 )

[node name="HostButton" parent="." index="3" instance=ExtResource( 6 )]

position = Vector2( 157.302, 690.28 )

[node name="BackButton" parent="." index="4" instance=ExtResource( 7 )]

position = Vector2( 62.921, 762.454 )

[node name="Objekte" type="TileMap" parent="." index="5"]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 48 )
cell_quadrant_size = 1
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 1
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 393224, 65, 0, 458758, 65, 0, 524301, 65, 0, 655361, 52, 0, 786431, 23, 0, 720896, 23, 0, 851965, 23, 0, 851966, 23, 0, 917499, 23, 0, 917500, 23, 0, 983033, 23, 0, 983034, 23, 0, 1048567, 23, 0, 1048568, 23, 0, 1114101, 23, 0, 1114102, 23, 0, 1048609, 65, 0, 1179635, 23, 0, 1179636, 23, 0, 1114147, 65, 0, 1245169, 64, 0, 1245170, 23, 0 )
_sections_unfolded = [ "Cell", "Collision", "Material", "Transform" ]

[node name="WandHoch" parent="Objekte" index="0" instance=ExtResource( 8 )]

position = Vector2( 450.721, 1693.17 )

[node name="WandHoch2" parent="Objekte" index="1" instance=ExtResource( 8 )]

position = Vector2( 926.406, 1198.29 )

[node name="Player2" parent="Objekte" index="2" instance=ExtResource( 9 )]

position = Vector2( -73.267, 1026.18 )

[node name="Player1" parent="Objekte" index="3" instance=ExtResource( 9 )]

position = Vector2( -173.2, 941.05 )
_sections_unfolded = [ "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z Index", "collision" ]
isplayerone = true

[node name="NPC" parent="Objekte" index="4" instance=ExtResource( 10 )]

position = Vector2( -255.652, 812.179 )

[node name="NPC2" parent="Objekte" index="5" instance=ExtResource( 10 )]

position = Vector2( 84.8621, 995.39 )

[node name="NPC3" parent="Objekte" index="6" instance=ExtResource( 10 )]

position = Vector2( -76.1416, 1165.65 )

[node name="NPC4" parent="Objekte" index="7" instance=ExtResource( 10 )]

position = Vector2( -300.066, 1030.55 )

[node name="NPC5" parent="Objekte" index="8" instance=ExtResource( 10 )]

position = Vector2( -18.7725, 863.996 )

[node name="Fabrikhalle2" parent="Objekte" index="9" instance=ExtResource( 11 )]

position = Vector2( 336.708, 525.765 )

[node name="Timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true
_sections_unfolded = [ "Pause" ]

[node name="Viewport" type="Viewport" parent="." index="7"]

arvr = false
size = Vector2( 0, 0 )
own_world = false
world = null
transparent_bg = false
msaa = 0
hdr = true
disable_3d = false
usage = 2
debug_draw = 0
render_target_v_flip = false
render_target_clear_mode = 0
render_target_update_mode = 2
audio_listener_enable_2d = false
audio_listener_enable_3d = false
physics_object_picking = false
gui_disable_input = false
gui_snap_controls_to_pixels = true
shadow_atlas_size = 0
shadow_atlas_quad_0 = 2
shadow_atlas_quad_1 = 2
shadow_atlas_quad_2 = 3
shadow_atlas_quad_3 = 4
_sections_unfolded = [ "Rendering" ]

[node name="status_ok" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_top = 459.0
margin_right = 417.0
margin_bottom = 473.0
rect_rotation = 36.1944
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="status_fail" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_top = 459.0
margin_right = 417.0
margin_bottom = 473.0
rect_rotation = 36.1944
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 1, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors" ]

[node name="adress" type="LineEdit" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 205.0
margin_top = 570.0
margin_right = 327.0
margin_bottom = 594.0
rect_rotation = 37.0673
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "10.23.42.182"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[connection signal="timeout" from="Timer" to="BodenObjekte" method="_on_Timer_timeout"]


